--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_jspbean_abstract_parent_alternative.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_jspbean_abstract_parent_alternative.html
@@ -33,13 +33,13 @@
  */
 package fr.paris.lutece.plugins.${plugin_model.pluginName}.web;
 
-import fr.paris.lutece.portal.web.admin.PluginAdminPageJspBean;
+import fr.paris.lutece.portal.util.mvc.admin.MVCAdminJspBean;
 
 
 /**
  * ${feature_name} JSP Bean abstract class for JSP Bean
  */
-public abstract class ${feature_name}JspBean extends PluginAdminPageJspBean
+public abstract class ${feature_name}JspBean extends MVCAdminJspBean
 {
     // Right
     public static final String RIGHT_${feature_name?upper_case} = "${feature_right}";
