PLUGINWIZARD-59 : Plugin's decription and provider not well defined in xml file
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@52096 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/commons/gt_xml_plugin_file.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/commons/gt_xml_plugin_file.html
@@ -7,8 +7,8 @@
     <installation><#if plugin.pluginInstallation??>${plugin.pluginInstallation}</#if></installation>
     <changes><#if plugin.pluginChanges??>${plugin.pluginChanges}</#if></changes>
     <user-guide><#if plugin.pluginUserGuide??>${plugin.pluginUserGuide}</#if></user-guide>
-    <description>${plugin.pluginDescription}</description>
-    <provider>${plugin.pluginProvider}</provider>
+    <description>${plugin.pluginName}.plugin.description</description>
+    <provider>${plugin.pluginName}.plugin.provider</provider>
     <provider-url>${plugin.pluginProviderUrl}</provider-url>
     <icon-url>${plugin.pluginIconUrl}</icon-url>
     <copyright>${plugin.pluginCopyright}</copyright>
