--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/classic/gt_business_idao_classic.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/classic/gt_business_idao_classic.html
@@ -8,15 +8,15 @@
  * are met:
  *
  *  1. Redistributions of source code must retain the above copyright notice
- *     and the following disclaimer.
+ *	 and the following disclaimer.
  *
  *  2. Redistributions in binary form must reproduce the above copyright notice
- *     and the following disclaimer in the documentation and/or other materials
- *     provided with the distribution.
+ *	 and the following disclaimer in the documentation and/or other materials
+ *	 provided with the distribution.
  *
  *  3. Neither the name of 'Mairie de Paris' nor 'Lutece' nor the names of its
- *     contributors may be used to endorse or promote products derived from
- *     this software without specific prior written permission.
+ *	 contributors may be used to endorse or promote products derived from
+ *	 this software without specific prior written permission.
  *
  * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
  * AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
@@ -40,62 +40,56 @@ import java.util.Collection;
 
 
 
- /**
+/**
  * I${business_class.businessClass}DAO Interface
  */
-
 public interface I${business_class.businessClass}DAO
 {
 
 
-    /**
-     * Insert a new record in the table.
-     * @param ${business_class.instanceName} instance of the ${business_class.businessClass} object to inssert
-     * @param plugin the Plugin
-     */
-
-    void insert( ${business_class.businessClass} ${business_class.instanceName}, Plugin plugin );
-
-
-
-     /**
-     * Update the record in the table
-     * @param ${business_class.instanceName} the reference of the ${business_class.businessClass}
-     * @param plugin the Plugin
-     */
-
-    void store( ${business_class.businessClass} ${business_class.instanceName}, Plugin plugin );
-
-
-    /**
-     * Delete a record from the table
-     * @param nId${business_class.businessClass} int identifier of the ${business_class.businessClass} to delete
-     * @param plugin the Plugin
-     */
-
-    void delete( int nId${business_class.businessClass}, Plugin plugin );
-
-    ///////////////////////////////////////////////////////////////////////////
-    // Finders
-
-    /**
-     * Load the data from the table
-     * @param strId The identifier of the ${business_class.instanceName}
-     * @param plugin the Plugin
-     * @return The instance of the ${business_class.instanceName}
-     */
-
-    ${business_class.businessClass} load( int nKey, Plugin plugin );
+	/**
+	 * Insert a new record in the table.
+	 * @param ${business_class.instanceName} instance of the ${business_class.businessClass} object to insert
+	 * @param plugin the Plugin
+	 */
+	void insert( ${business_class.businessClass} ${business_class.instanceName}, Plugin plugin );
 
 
 
-     /**
-     * Load the data of all the ${business_class.instanceName} objects and returns them as a collection
-     * @param plugin the Plugin
-     * @return The collection which contains the data of all the ${business_class.instanceName} objects
-     */
+	/**
+	 * Update the record in the table
+	 * @param ${business_class.instanceName} the reference of the ${business_class.businessClass}
+	 * @param plugin the Plugin
+	 */
+	void store( ${business_class.businessClass} ${business_class.instanceName}, Plugin plugin );
 
-    Collection&lt;${business_class.businessClass}&gt; select${business_class.businessClass}sList( Plugin plugin );
-    
+
+	/**
+	 * Delete a record from the table
+	 * @param nId${business_class.businessClass} int identifier of the ${business_class.businessClass} to delete
+	 * @param plugin the Plugin
+	 */
+	void delete( int nId${business_class.businessClass}, Plugin plugin );
+
+	///////////////////////////////////////////////////////////////////////////
+	// Finders
+
+	/**
+	 * Load the data from the table
+	 * @param nKey The identifier of the ${business_class.instanceName}
+	 * @param plugin the Plugin
+	 * @return The instance of the ${business_class.instanceName}
+	 */
+	${business_class.businessClass} load( int nKey, Plugin plugin );
+
+
+
+	/**
+	 * Load the data of all the ${business_class.instanceName} objects and returns them as a collection
+	 * @param plugin the Plugin
+	 * @return The collection which contains the data of all the ${business_class.instanceName} objects
+	 */
+	Collection&lt;${business_class.businessClass}&gt; select${business_class.businessClass}sList( Plugin plugin );
+	
 }
 
