PLUGINWIZARD-63 : load() method error fixed in Business DAO
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@52681 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/classic/gt_business_dao_classic.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/classic/gt_business_dao_classic.html
@@ -110,7 +110,7 @@ public final class ${business_class.businessClass}DAO implements I${business_cla
 	public ${business_class.businessClass} load( int nKey, Plugin plugin )
 	{
 		DAOUtil daoUtil = new DAOUtil( SQL_QUERY_SELECT, plugin );
-		daoUtil.setInt( 1 , nId );
+		daoUtil.setInt( 1 , nKey );
 		daoUtil.executeQuery( );
 
 		${business_class.businessClass} ${business_class.instanceName} = null;
