PLUGINWIZARD-66 : POM not always generated and models are duplicated in DB
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@53533 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin_description.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin_description.html
@@ -11,6 +11,7 @@
 
     <div class="span8">
         <form class="form form-horizontal well" method="post" action="jsp/site/Portal.jsp" >    
+            <input type="hidden" name="id_plugin" value="${plugin_id}" />
             <fieldset>
                 <h4>#i18n{pluginwizard.pluginwizard_create_plugin_description.pageTitle}</h4>                 
 
